--- a/week2_assignment/views/layouts/main.handlebars
+++ b/week2_assignment/views/layouts/main.handlebars
@@ -18,16 +18,16 @@
             </div>
     </nav>
     <div class=" mx-0 px-4 container">
-    <div class="row">
-        <div class="col-md-6">
-            <p>You can type anything you want here</p>
-            <textarea class="" cols="50" row="10" form="notes" name="text"></textarea>
+        <div class="row">
+            <div class="col-md-12">
+                <p>You can type anything you want here</p>
+                <textarea class="" cols="50" row="10" form="notes" name="text"></textarea>
 
-            <form action="/" method="POST" id="notes">
-                <input type="submit" value="submit">
-            </form>
-        </div>
-        {{{body}}}
+                <form action="/" method="POST" id="notes">
+                    <input type="submit" value="submit">
+                </form>
+            </div>
+            {{{body}}}
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
@@ -40,7 +40,9 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
-            <script src="../../public/index.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+        <script src="index.js"></script>
 </body>
 
 </html>
