--- a/week3_assignment/views/home.handlebars
+++ b/week3_assignment/views/home.handlebars
@@ -1,7 +1,7 @@
 {{#each text}}
-<div  id="{{ @index }}" class=" notes col-md-6">
+<div  id="{{ id }}" class=" notes col-md-6">
 <div  class="  panel panel-default">
-  <div class="note panel-body"><textarea>{{this}}</textarea>  <button type="button"  class="remove btn btn-sm btn-danger">X</button>
+  <div class="note panel-body"><textarea>{{text_data}}</textarea>  <button type="button"  class="remove btn btn-sm btn-danger">X</button>
 </div>
 
 </div>
